# tester

./: .clang-format  .gitignore  CMakeLists.txt  init_git_repo.sh  push.sh  start.sh
_inc/: __preprocessor__.h  time_stamp.h
_src/: _format_tester_.cpp  main.cpp  my_functions.cpp
_test/: test.cpp
input/: 1.txt  23.txt  quiz_1.txt  quiz_2.txt  sorted_ONE_ANSWER.txt
scripts/: formating_hook.sh  new_inc_src.sh  production.sh  run.sh  test.sh
